# scale

./: LICENSE  README.md  pyproject.toml
notebooks/: vignette.ipynb
scale/: __init__.py  clustering.py  config.py  model.py  training.py  utils.py
scale/search/: __init__.py  _entropy.py  _stability.py
